syntax = "proto3";enum HeadType {    LOGIN = 0;    LOGIN_RESPONSE = 1;    LOGIN_OUT = 2;    LOGIN_OUT_RESPONSE = 3;    PING = 4;    PONG = 5;    PUBLISH = 6;    PUBLISH_RESPONSE = 7;}enum PublishType {    MS = 0;    MP = 1;    MN = 2;}enum PlatForm {    ANDROID = 0;    IOS = 1;}message Login {    string token = 1;    bytes encryptData = 2;    bytes encryptKey = 3;}message ClientInfo {    string clientId = 1;    string userId = 2;    uint32 platForm = 3;    string appVersion = 4;}message LoginResponse {    uint64 messageHead = 1;    uint64 userSettingHead = 2;    uint64 userFriendHead = 3;    uint64 friendRequestHead = 4;}